[gd_scene load_steps=11 format=2]

[ext_resource path="res://script/main.gd" type="Script" id=1]
[ext_resource path="res://img/img-128x128/1-G-D-B.png" type="Texture" id=2]
[ext_resource path="res://scene/topleft.gd" type="Script" id=3]
[ext_resource path="res://scene/topmiddle.gd" type="Script" id=4]
[ext_resource path="res://img/img-128x128/3-P-S-L.png" type="Texture" id=5]
[ext_resource path="res://img/img-128x128/2-G-S-B.png" type="Texture" id=6]
[ext_resource path="res://scene/topright.gd" type="Script" id=7]
[ext_resource path="res://scene/topmiddle2.gd" type="Script" id=8]
[ext_resource path="res://scene/topmiddle1.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Node2D" type="Node2D"]
position = Vector2( -1.80493, 2.70746 )
script = ExtResource( 1 )

[node name="topleft" type="Area2D" parent="."]
position = Vector2( 90.8821, 80.5935 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="topleft"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="topleft/CollisionShape2D"]
texture = ExtResource( 6 )

[node name="topmiddle1" type="Area2D" parent="."]
position = Vector2( 258.071, 80.5935 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="topmiddle1"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="topmiddle1/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="topmiddle2" type="Area2D" parent="."]
position = Vector2( 418.4, 80.5935 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="topmiddle2"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="topmiddle2/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="topright" type="Area2D" parent="."]
position = Vector2( 578.73, 81.4509 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="topright"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="topright/CollisionShape2D"]
texture = ExtResource( 2 )

[node name="centerleft" type="Area2D" parent="."]
position = Vector2( 87.4525, 228.062 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="centerleft"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="centerleft/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="centermiddle1" type="Area2D" parent="."]
position = Vector2( 256.356, 228.062 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="centermiddle1"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="centermiddle1/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="centermiddle2" type="Area2D" parent="."]
position = Vector2( 414.971, 226.348 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="centermiddle2"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="centermiddle2/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="centerright" type="Area2D" parent="."]
position = Vector2( 578.73, 228.92 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="centerright"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="centerright/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="bottomleft" type="Area2D" parent="."]
position = Vector2( 86.595, 375.531 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottomleft"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="bottomleft/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="bottommiddle1" type="Area2D" parent="."]
position = Vector2( 257.213, 373.817 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottommiddle1"]
position = Vector2( 0.857422, 0 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="bottommiddle1/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="bottommiddle2" type="Area2D" parent="."]
position = Vector2( 416.685, 372.102 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottommiddle2"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="bottommiddle2/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="bottomright" type="Area2D" parent="."]
position = Vector2( 578.73, 372.102 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottomright"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="bottomright/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
margin_left = 321.373
margin_top = 532.463
margin_right = 530.373
margin_bottom = 587.463
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="solved1" type="Area2D" parent="."]
position = Vector2( -0.000244141, 426.117 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="solved1"]
position = Vector2( 120.182, 289.828 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="solved1/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="solved2" type="Area2D" parent="."]
position = Vector2( 183.479, 425.259 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="solved2"]
position = Vector2( 120.182, 289.828 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="solved2/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="solved3" type="Area2D" parent="."]
position = Vector2( 356.669, 423.545 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="solved3"]
position = Vector2( 120.182, 289.828 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="solved3/CollisionShape2D"]
texture = ExtResource( 5 )

[node name="helper" type="Node" parent="."]

[node name="Label2" type="Label" parent="helper"]
margin_left = 583.815
margin_top = 520.597
margin_right = 685.815
margin_bottom = 534.597
text = "TABLERO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tablero_label" type="Label" parent="helper"]
margin_left = 580.013
margin_top = 561.733
margin_right = 811.013
margin_bottom = 660.733
text = "STATUS to be updated
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="helper"]
margin_left = 16.9426
margin_top = 548.153
margin_right = 247.943
margin_bottom = 636.153
text = "SET helper:
Numbers: 1, 2, 3
Color: Red, Green Purple
Shape: Diamond, Serpent, Rectangle
Fill: Full, Blank, Lines"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cardlist_label" type="Label" parent="helper"]
margin_left = 838.901
margin_top = 17.6175
margin_right = 1005.9
margin_bottom = 500.617
text = "cardlist"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_solver" type="Button" parent="helper"]
margin_left = 376.455
margin_top = 608.315
margin_right = 463.455
margin_bottom = 633.315
text = "SOLVE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="helper/button_solver" to="." method="_on_button_solver_pressed"]
